content.useTempContent => content.useTemp

--- a/src/data/levels/001_Assembly language/002_Reading from memory/chat/en.yml
+++ b/src/data/levels/001_Assembly language/002_Reading from memory/chat/en.yml
@@ -84,7 +84,7 @@ exercise:
       m.chat.stopBlock = null;
       m.$canRun = true;
       m.$canEdit = true;
-      m.content.useTempContent = false;
+      m.content.useTemp = false;
     });
   messages:
   - let's refactor the code 💡
