--- a/src/data/levels/001_Assembly language/005_Addressing modes (1-3)/chat/es.yml
+++ b/src/data/levels/001_Assembly language/005_Addressing modes (1-3)/chat/es.yml
@@ -149,7 +149,7 @@ exercise:
       m.chat.stopBlock = null;
       m.$canRun = true;
       m.$canEdit = true;
-      m.content.useTempContent = false;
+      m.content.useTemp = false;
     });
   messages:
   - ahí está...
