--- a/src/data/levels/001_Assembly language/006_Addressing modes (2-3)/chat/en.yml
+++ b/src/data/levels/001_Assembly language/006_Addressing modes (2-3)/chat/en.yml
@@ -118,7 +118,7 @@ exercise:
       m.chat.stopBlock = null;
       m.$canRun = true;
       m.$canEdit = true;
-      m.content.useTempContent = false;
+      m.content.useTemp = false;
     });
     {{Bottom}}.setDelay(0);
   messages:
