--- a/src/data/levels/001_Assembly language/008_Stack/chat/es.yml
+++ b/src/data/levels/001_Assembly language/008_Stack/chat/es.yml
@@ -56,7 +56,7 @@ exercise:
       m.chat.stopBlock = null;
       m.$canRun = true;
       m.$canEdit = true;
-      m.content.useTempContent = false;
+      m.content.useTemp = false;
     });
   messages:
   - ahora, un ejercicio
