--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "escape-string-regexp": "^5.0.0",
     "eventemitter3": "^4.0.7",
     "history": "^4.10.1",
+    "install": "^0.13.0",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "nes-emu": "^1.0.3",
+    "npm": "^8.19.2",
+    "path-browserify": "^1.0.1",
     "pixi-filters": "^4.2.0",
     "pixi-lights": "^3.0.0",
     "pixi.js": "^6.3.0",
