--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "pixi-lights": "^3.0.0",
     "pixi.js": "^6.3.0",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
