--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@codemirror/lint": "6.0.0",
     "@codemirror/theme-one-dark": "6.1.0",
     "@fancyapps/ui": "^4.0.31",
-    "@neshacker/6502-tools": "github:rodri042/6502",
+    "@neshacker/6502-tools": "github:rodri042/6502#3de7e48e797fe5e32745b467015d57b0755b96e8",
     "@pixi/layers": "^1.0.11",
     "@rematch/core": "^2.2.0",
     "@rematch/loading": "^2.1.2",
@@ -66,7 +66,7 @@
     "updated-xterm-for-react": "5.0.0",
     "xterm": "5.0.0",
     "xterm-addon-fit": "^0.5.0",
-    "xterm-link-provider": "^1.3.1",
+    "xterm-link-provider": "github:rodri042/xterm-link-provider#c55e642cc05475cd66f7c56e0435df6efc31f8aa",
     "yaml": "^2.1.1"
   },
   "main": "desktop.js",
