--- a/src/data/levels/001_Assembly language/005_Addressing modes (1-3)/chat/en.yml
+++ b/src/data/levels/001_Assembly language/005_Addressing modes (1-3)/chat/en.yml
@@ -164,8 +164,13 @@ exercise:
   - as an exercise, modify the code by adding an `STY $1001` instruction at the end
   - then an `INX` instruction
   - and lastly, change lines 10 and 12 so the indirect `JMP` goes directly into the new `INX` 👀
-  - (instead of jumping backwards, it should skip the `STY` and jump to our new last instruction)
-  - ⚠️  don't change the `JMP` itself, the idea is that the same `JMP ($4080)` jumps to another place
-  - you'll need to look the address of the last `INX` inside the compiled code
   - when you finish, run the `test` command
+  responses:
+  - wait, what? [what]
+
+what:
+  messages:
+  - after your change, instead of jumping backwards, it should skip the `STY $1001` and jump to our new last instruction
+  - ⚠️  don't change the `JMP` itself, the idea is that the same `JMP ($4080)` jumps to another place
+  - you'll need to look the address of the last `INX` inside the compiled code 😉
   responses: []
