--- a/src/data/levels/001_Assembly language/005_Addressing modes (1-3)/chat/es.yml
+++ b/src/data/levels/001_Assembly language/005_Addressing modes (1-3)/chat/es.yml
@@ -164,8 +164,13 @@ exercise:
   - como ejercicio, modifica el código agregando una instrucción `STY $1001` al final
   - luego una instrucción `INX`
   - y por último, cambia las líneas 10 y 12 para que el `JMP` indirecto vaya directamente a la nueva `INX` 👀
-  - (en vez de saltar hacia atrás, debería omitir `STY` y saltar a nuestra nueva última instrucción)
-  - ⚠️  no cambies el `JMP` en sí mismo, la idea es que el mismo `JMP ($4080)` salte a otro lugar
-  - necesitarás mirar la dirección del último `INX` dentro del código compilado
   - cuando termines, ejecuta el comando `test`
+  responses:
+  - momento, ¿qué? [what]
+
+what:
+  messages:
+  - luego de tu cambio, en vez de saltar hacia atrás, debería omitir `STY $1001` y saltar a nuestra nueva última instrucción
+  - ⚠️  no cambies el `JMP` en sí mismo, la idea es que el mismo `JMP ($4080)` salte a otro lugar
+  - necesitarás mirar la dirección del último `INX` dentro del código compilado 😉
   responses: []
