Adding tests from level 3.1

--- a/src/data/levels/002_Cartridge (1-2)/000_Using JS modules/chat/en.yml
+++ b/src/data/levels/002_Cartridge (1-2)/000_Using JS modules/chat/en.yml
@@ -48,7 +48,7 @@ ready:
 syntax:
   messages:
   - "to set the export value of a module:"
-  - "  ```javascript export default () => { ... }```"
+  - "  ```javascript export default someValue```"
   - "to import a module:"
-  - "  ```javascript import world from \"./relative/path/to/world\"```"
+  - "  ```javascript import someModule from \"./relative/path/to/someModule\"```"
   responses: []
