--- a/src/data/levels/000_Getting started/001_Quick tutorial/chat/es.yml
+++ b/src/data/levels/000_Getting started/001_Quick tutorial/chat/es.yml
@@ -47,6 +47,6 @@ turnontv:
 
 shortcuts:
   messages:
-  - puedes listarlos todos, en cualquier momento, ejecutando `help -a`
+  - puedes listarlos todos, en cualquier momento, ejecutando `help keys`
   responses:
   - ...main
