--- a/src/data/levels/000_Getting started/001_Quick tutorial/chat/en.yml
+++ b/src/data/levels/000_Getting started/001_Quick tutorial/chat/en.yml
@@ -47,6 +47,6 @@ turnontv:
 
 shortcuts:
   messages:
-  - you can list them all, at any time, by running `help -a`
+  - you can list them all, at any time, by running `help keys`
   responses:
   - ...main
