--- a/src/data/levels/002_Cartridge (1-2)/000_Using JS modules/chat/en.yml
+++ b/src/data/levels/002_Cartridge (1-2)/000_Using JS modules/chat/en.yml
@@ -35,7 +35,7 @@ play:
   messages:
   - the code editor is displaying your <main code file> (the entry point of your emulator)
   - it's in ~/code/index.js~
-  - now you have a bunch of new commands to manage files
+  - now you have a bunch of new commands to manage files 🚀
   - run `help -a` and play around with them a little bit
   - open the chat again when you're ready
   responses: []
@@ -44,8 +44,16 @@ exercise:
   run: |
     set((m) => m.$end = true);
   messages:
-  - create a file in ~/code/world.js~
-  - its default export should be the string "w0rld"
+  - create a file in ~/code/Cartridge.js~
+  - its default export should be an empty class
   - then, import that file from ~/code/index.js~
-  - and make it so it exports a function that returns "h3ll0 " + the string from the imported ~world~ module
+  - and export an object with only one key ("Cartridge") pointing to that class
+  responses:
+  - export? modules? 🧐 [modules]
+
+modules:
+  messages:
+  - yeah, every file is a module, and it has <exported> value
+  - that value can be any JS expression, and it can be used elsewhere by <importing> the module
+  - you can learn the syntax by running `help`
   responses: []
