--- a/src/data/levels/002_Cartridge (1-2)/001_The magic constant/chat/en.yml
+++ b/src/data/levels/002_Cartridge (1-2)/001_The magic constant/chat/en.yml
@@ -23,4 +23,12 @@ exercise:
   messages:
   - add a constructor to the `Cartridge` class receiving the ROM bytes, and save them in an instance variable called `bytes`
   - if the magic constant doesn't match $4E $45 $53, throw an error with the "Invalid ROM." message
+  responses:
+  - I need help 🥺 [help]
+
+help:
+  messages:
+  - you'll receive a `Uint8Array`, which works similar to regular arrays!
+  - remember that you can express hexadecimal notation with the ~0x~ prefix, i.e. ~0x4e~
+  - "to throw errors, use:\n  ```javascript throw new Error(\"a message\")```"
   responses: []
