--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "install": "^0.13.0",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
+    "marked": "^4.2.3",
     "nes-emu": "^1.0.3",
     "npm": "^8.19.2",
     "path-browserify": "^1.0.1",
