--- a/src/data/levels/000_Getting started/002_Architecture/chat/en.yml
+++ b/src/data/levels/000_Getting started/002_Architecture/chat/en.yml
@@ -15,6 +15,8 @@ main:
   - (l) what's the best way to start? [start]
 
 cpu:
+  run: |
+    {{Right}}.load("architecture.png");
   messages:
   - it's the Central Processing Unit
   - reads a game's code and executes its instructions
@@ -25,6 +27,8 @@ cpu:
   - ...main
 
 thecode:
+  run: |
+    {{Right}}.load("cartridge.png");
   messages:
   - in the cartridge!
   - specifically, in a chip called PRG-ROM (Program ROM)
@@ -32,6 +36,8 @@ thecode:
   - ...main
 
 ppu:
+  run: |
+    {{Right}}.load("architecture.png");
   messages:
   - it's the Picture Processing Unit
   - draws graphics by putting pixels on the screen
@@ -41,6 +47,8 @@ ppu:
   - ...main
 
 thegraphics:
+  run: |
+    {{Right}}.load("cartridge.png");
   messages:
   - in the cartridge! :)
   - specifically, in a chip called CHR-ROM (Character ROM)
@@ -48,6 +56,8 @@ thegraphics:
   - ...main
 
 apu:
+  run: |
+    {{Right}}.load("architecture.png");
   messages:
   - it's the Audio Processing Unit
   - handles sound, producing audio waves
