Updating prerequisites and adding es6 support

--- a/src/data/levels/000_Getting started/000_Introduction/chat/es.yml
+++ b/src/data/levels/000_Getting started/000_Introduction/chat/es.yml
@@ -75,6 +75,6 @@ javascript:
   messages:
   - eso va a funcionar
   - pero también necesitas conocimientos básicos de sistemas informáticos
-  - (bytes, lógica booleana, sistemas de numeración, etc.)
+  - (bytes, enteros con signo, lógica booleana, sistemas de numeración, etc.)
   responses:
   - ok, hagámoslo [end]
