--- a/src/data/levels/000_Getting started/000_Introduction/chat/en.yml
+++ b/src/data/levels/000_Getting started/000_Introduction/chat/en.yml
@@ -75,6 +75,6 @@ javascript:
   messages:
   - that'll work perfect
   - but you also need basic understanding of computer systems
-  - (bytes, boolean logic, numbering systems, etc.)
+  - (bytes, signed integers, boolean logic, numbering systems, etc.)
   responses:
   - ok, let's do this [end]
