Using default object with $ in repl, explaining repl in level

--- a/src/data/levels/002_Cartridge/002_Reading the header/chat/en.yml
+++ b/src/data/levels/002_Cartridge/002_Reading the header/chat/en.yml
@@ -86,4 +86,20 @@ bits:
   - if you don't know how to operate with bits, you can use my library 📚
   - its in ~/lib/byte.js~, just import it as another module and use it
   - the methods you'd want to use are `highNybbleOf`, `lowNybbleOf`, and `buildU8`
+  responses:
+  - how can I import the module? [import]
+
+import:
+  messages:
+  - |-
+    do it like this:
+      ```javascript import byte from "/lib/byte"```
+  - |-
+    also, if you add it to your exported `index.js` object:
+      ```javascript import Cartridge from "./Cartridge"
+      import byte from "/lib/byte";
+
+      export default { Cartridge, byte }```
+  - you could test the library with the ~repl~ command
+  - an interactive JS prompt! 🤯
   responses: []
