Adding 'Reading the header' spanish chat

--- a/src/data/levels/002_Cartridge/001_The magic constant/chat/es.yml
+++ b/src/data/levels/002_Cartridge/001_The magic constant/chat/es.yml
@@ -4,7 +4,7 @@ main:
     if (m.$end) $.goTo("exercise");
   messages:
   - los juegos se suelen preservar en formato digital con archivos de juego (también llamados ROMs) 👾
-  - estos contienen código, gráficos, y una cabecera que identifica el hardware
+  - estos contienen código, gráficos y una cabecera que identifica el hardware
   responses:
   - son los famosos archivos *.neees, ¿no? [neeesfiles]
 
