--- a/src/data/levels/002_Cartridge/000_Using JS modules/chat/en.yml
+++ b/src/data/levels/002_Cartridge/000_Using JS modules/chat/en.yml
@@ -36,7 +36,7 @@ play:
   - the code editor is displaying your <main code file> (the entry point of your emulator)
   - it's in ~/code/index.js~
   - now you have a bunch of new commands to manage files 🚀
-  - run `help -a` and play around with them a little bit
+  - run `help -a` and play around with them for a little bit
   - open the chat again when you're ready
   responses: []
 
